--- a/010/index.html
+++ b/010/index.html
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
-<meta name="viewport" content="user-scalable=0"/>
+<meta name="viewport" content="user-scalable=0" />
 <html>
-<head>
-    <title></title>
-    <script src="marmoset.js"></script>
-</head>
-<body>
-    <script>
-        marmoset.embed( 'scene.mview', { width: 800, height: 600, autoStart: true, fullFrame: true, pagePreset: false } );
-		 marmoset.noUserInterface = true;
-    </script>
-</body>
+	<head>
+		<title>减租斗</title>
+		<script src="marmoset.js"></script>
+		<style type="text/css">
+			.title {
+				position: absolute;
+				z-index: 2;
+				font-size: 40px;
+				top: 3%;
+				left: 50%;
+				padding-left: 0;
+				transform: translateX(-50%);
+				font-weight: 500;
+				color: #dbba82;
+			}
+		</style>
+	</head>
+	<body>
+		<div class="title">减租斗</div>
+		<script>
+			marmoset.embed('index.mview', {
+				width: 800,
+				height: 600,
+				autoStart: true,
+				fullFrame: true,
+				pagePreset: false
+			});
+			marmoset.noUserInterface = true;
+		</script>
+	</body>
 </html>
