--- a/001/index.html
+++ b/001/index.html
@@ -2,7 +2,7 @@
 <meta name="viewport" content="user-scalable=0" />
 <html>
 	<head>
-		<title>减租斗</title>
+		<title></title>
 		<script src="marmoset.js"></script>
 		<style type="text/css">
 			.title {
