--- a/001/index.html
+++ b/001/index.html
@@ -19,7 +19,7 @@
 		</style>
 	</head>
 	<body>
-		<div class="title">减租斗</div>
+		<div class="title"></div>
 		<script>
 			marmoset.embed('index.mview', {
 				width: 800,
