--- a/005/index.html
+++ b/005/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <title></title>
-    <script src="marmoset.js"></script>
+    <script src="https://li932565422.github.io/test001/marmoset.js"></script>
 </head>
 <body>
     <script>
