--- a/014/index.html
+++ b/014/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <script>
-        marmoset.embed( 'scene.mview', { width: 800, height: 600, autoStart: true, fullFrame: true, pagePreset: false } );
+        marmoset.embed( 'index.mview', { width: 800, height: 600, autoStart: true, fullFrame: true, pagePreset: false } );
 		 marmoset.noUserInterface = true;
     </script>
 </body>
